@@ -1,3 +1,4 @@
+* issue 77: complete multiprocessing cleanup upon PowderModel.close()
 * issue 76: cif parser: fix bug introduced in version 1.5.2
 
 v1.5.2, 2019-06-28
